[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/FontBig.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/menus/PauseFrameStutter.gd" type="Script" id=2]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=3]

[node name="Popup" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0

[node name="Title" type="Label" parent="Panel"]
anchor_right = 1.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Options"
align = 1
valign = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 51.0
margin_top = 79.0
margin_right = -51.0
margin_bottom = -79.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/PanelContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 1090.0
margin_bottom = 474.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Options" type="VBoxContainer" parent="Panel/PanelContainer/ScrollContainer"]
margin_right = 1066.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Restart" type="Button" parent="Panel/PanelContainer/ScrollContainer/Options"]
margin_top = 107.0
margin_right = 1066.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 42 )
text = "Restart Level"

[node name="HSeparator" type="HSeparator" parent="Panel/PanelContainer/ScrollContainer/Options"]
margin_top = 164.0
margin_right = 1066.0
margin_bottom = 194.0

[node name="Title" type="RichTextLabel" parent="Panel/PanelContainer/ScrollContainer/Options"]
margin_top = 209.0
margin_right = 1066.0
margin_bottom = 239.0
custom_colors/default_color = Color( 1, 1, 0, 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Level Select"
text = "Level Select"
fit_content_height = true
scroll_active = false

[node name="LevelSelect" type="VBoxContainer" parent="Panel/PanelContainer/ScrollContainer/Options"]
margin_top = 254.0
margin_right = 1066.0
margin_bottom = 270.0

[node name="Practice" type="HBoxContainer" parent="Panel/PanelContainer/ScrollContainer/Options/LevelSelect"]
margin_right = 1066.0

[node name="Row1" type="HBoxContainer" parent="Panel/PanelContainer/ScrollContainer/Options/LevelSelect"]
margin_top = 4.0
margin_right = 1066.0
margin_bottom = 4.0

[node name="Row2" type="HBoxContainer" parent="Panel/PanelContainer/ScrollContainer/Options/LevelSelect"]
margin_top = 8.0
margin_right = 1066.0
margin_bottom = 8.0

[node name="Row3" type="HBoxContainer" parent="Panel/PanelContainer/ScrollContainer/Options/LevelSelect"]
margin_top = 12.0
margin_right = 1066.0
margin_bottom = 12.0

[node name="Row4" type="HBoxContainer" parent="Panel/PanelContainer/ScrollContainer/Options/LevelSelect"]
margin_top = 16.0
margin_right = 1066.0
margin_bottom = 16.0

[node name="PlayerID" type="HBoxContainer" parent="Panel/PanelContainer/ScrollContainer/Options"]
margin_top = 285.0
margin_right = 1066.0
margin_bottom = 306.0

[node name="Label" type="Label" parent="Panel/PanelContainer/ScrollContainer/Options/PlayerID"]
margin_right = 135.0
margin_bottom = 21.0
text = "Player ID:"

[node name="PlayerScore" type="HBoxContainer" parent="Panel/PanelContainer/ScrollContainer/Options"]
margin_top = 321.0
margin_right = 1066.0
margin_bottom = 342.0

[node name="Label" type="Label" parent="Panel/PanelContainer/ScrollContainer/Options/PlayerScore"]
margin_right = 87.0
margin_bottom = 21.0
text = "Score:"

[node name="Done" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -53.0
margin_right = 96.0
margin_bottom = -23.0
text = "Done"

[connection signal="mouse_entered" from="Panel/PanelContainer/ScrollContainer/Options/Restart" to="." method="_on_Restart_mouse_entered"]
[connection signal="pressed" from="Panel/PanelContainer/ScrollContainer/Options/Restart" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="Panel/Done" to="." method="_on_Done_mouse_entered"]
[connection signal="pressed" from="Panel/Done" to="." method="_on_Done_pressed"]
